# BlockSort

./: .gitignore  BlockSort.cabal  README.md  stack.yaml
.stack-work/install/6c953ab2/flag-cache/: BlockSort-0.1.0.0-LbOyOVEhjAAKSfXaMTE9Mw
.stack-work/install/6c953ab2/lib/x86_64-windows-ghc-8.0.2/BlockSort-0.1.0.0-LbOyOVEhjAAKSfXaMTE9Mw/: Lib.hi
.stack-work/install/6c953ab2/pkgdb/: BlockSort-0.1.0.0-LbOyOVEhjAAKSfXaMTE9Mw.conf  package.cache
app/: Main.hs
src/: BinaryData.hs  BlockColor.hs  BonusPoint.hs  Cost.hs  EndPoint.hs  FloorNodes.hs  Graph.hs  GraphConstants.hs  InitCode.hs  Lib.hs  SolveGraph.hs  StartPoint.hs
test/: BinaryDataSpec.hs  GraphSpec.hs  LibSpec.hs  SolveGraphSpec.hs
