name:                BlockSort
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/BlockSort#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , BlockColor
                     , BinaryData
                     , InitCode
                     , GraphConstants
                     , BonusPoint
                     , Cost
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , containers
                     , array
                     , fgl
                     , linear
  default-language:    Haskell2010

executable BlockSort-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , BlockSort
                     , containers
                     , array
                     , fgl
                     , csv
                     , binary
                     , async
  default-language:    Haskell2010

test-suite BlockSort-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       BinaryDataSpec
                     , LibSpec
  build-depends:       base
                     , BlockSort
                     , array
                     , containers
                     , hspec
                     , binary
                     , bytestring
                     , linear
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/BlockSort
